fix list margin collapse

--- a/src/styles/Playlist.module.css
+++ b/src/styles/Playlist.module.css
@@ -15,7 +15,7 @@
 }
 
 .list-filter-container {
-  max-width: 420px;
+  max-width: 380px;
   border-radius: 10px;
 }
 
@@ -26,6 +26,10 @@
 .title-group {
   display: flex;
   flex-direction: column;
+}
+
+.title-group > :first-child {
+  padding-block-start: 1px;
 }
 
 .filter-container select {
@@ -59,7 +63,6 @@
 .container ul {
   padding: 0;
   margin: 0;
-  max-width: calc(100vw - 1rem);
   background-color: aqua;
   border-radius: 10px;
 }
